升级 JDK17 并清理过期 API
- 调整 Maven 编译配置到 JDK17
- 使用 JDK17 语法优化核心代码
- 替换反射和 OGNL 过期 API
- 缓存默认方法 MethodHandle 提升调用性能
- 更新 Redis、Mongo、Milvus、Elastic 适配器 API
- 保留 JDBC 和 Redis 旧接口兼容行为